# Savour-It

./: .gitignore  MANIFEST.in  README.md  appveyor.yml  babel.config.js  package-lock.json  package.json  requirements.txt  setup.cfg  webpack.config.js
djangoApi/: db.sqlite3
djangoApi/Authentication/: admin.py  models.py  serializers.py  urls.py  views.py
djangoApi/Authentication/migrations/: 0001_initial.py
djangoApi/Authentication/tests/IntegrationTests/: test_view_create_user.py
djangoApi/RecipeApp/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
djangoApi/RecipeApp/fixtures/: baked_chicken.json  baked_chicken_image.json  user_single.json
djangoApi/RecipeApp/migrations/: 0001_initial.py  0002_auto_20210310_1540.py  0003_auto_20210311_1004.py  0004_auto_20210311_1036.py  0005_auto_20210311_1904.py  0006_auto_20210311_1913.py  0007_auto_20210311_1913.py  0008_auto_20210311_1920.py  0009_auto_20210311_1922.py  0010_auto_20210314_1312.py  0011_auto_20210314_2316.py  0012_auto_20210315_1014.py
djangoApi/RecipeApp/tests/IntegrationTests/: test_view_get_recipe.py  test_view_post_recipe.py
djangoApi/RecipeApp/tests/UnitTests/: test_recipe_serializer.py
djangoApi/authentication/: admin.py  urls.py  views.py
djangoApi/authentication/tests/IntegrationTests/: test_api_token.py  test_view_create_user.py
djangoApi/djangoApi/: settings.py  urls.py
djangoApi/frontend/: urls.py  views.py
djangoApi/frontend/src/: axiosApi.js  recipeApi.js
djangoApi/frontend/src/__mocks__/: axiosApi.js
djangoApi/frontend/src/components/: App.js  login.js  (+7 more)
(+6 files in other folders)
