[metadata]
name = savour-it
version = 0.1.0
description = A Django-React web app for storing recipes.
long_description = file: README.md
url = https://github.com/Robert-N7/PracticalAccendero
author = Robert
author_email = robert7.nelson@gmail.com
license = GPL-3.0-only
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find: